# tcv_screenshots

./: .gitignore  CHANGES.md  Makefile  README.md  pyproject.toml
.github/workflows/: screenshots.yml
examples/: assembly.py  box.py  hexapod.py  ignored-example.py  incremental.py
tcv_screenshots/: __init__.py  __main__.py  render.py  three-cad-viewer.js  viewer.html
